--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ MANIFEST
 
 Gaudet-Lander/AAS-18-290_6DOF_journal/
 /Genetic_Programming/IC_NN_FESTIP/.idea/
+
+Genetic_Programming/GP_Variants/EuroGP2020/.idea/
